// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when rendering a list table with fixed widths renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  overflow: auto;
  width: 100%;
  position: relative;
  margin: 24px 0;
}

table .emotion-0 {
  margin: 0;
}

.emotion-1 {
  border-spacing: 0;
  border-collapse: collapse;
  width: 100%;
  color: #1C2D38;
  font-size: 13px;
  line-height: 20px;
}

<div
    class="emotion-0"
    tabindex="0"
  >
    <table
      class="emotion-1"
      columns="[object Object]"
      data="[object Object]"
    />
  </div>
</DocumentFragment>
`;

exports[`when rendering a list-table directive renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  overflow: auto;
  width: 100%;
  position: relative;
  margin: 24px 0;
}

table .emotion-0 {
  margin: 0;
}

.emotion-1 {
  border-spacing: 0;
  border-collapse: collapse;
  width: 100%;
  color: #1C2D38;
  font-size: 13px;
  line-height: 20px;
}

<div
    class="emotion-0"
    tabindex="0"
  >
    <table
      class="emotion-1"
      columns="[object Object]"
      data="[object Object],[object Object],[object Object],[object Object],[object Object]"
    />
  </div>
</DocumentFragment>
`;
